GEMBA by Gemini pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /rm4mt_dataset
 /rm4mt_translated
+/rm4mt_translated_4_test
 /rm4mt_translated_with_comet
+/rm4mt_translated_with_gemba
 /rm4mt_eval/tmp_jobs
 .env
 /rm4mt_eval/test.py
