--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /rm4mt_dataset
 /rm4mt_translated
+/rm4mt_wait_translated
 /rm4mt_translated_4_test
 /rm4mt_translated_with_comet
 /rm4mt_translated_with_gemba
