--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@
 /rm4mt_wait_translated
 /rm4mt_translated_4_test
 /rm4mt_translated_with_comet
+/rm4mt_wait_translated_with_comet
 /rm4mt_translated_with_gemba
+/rm4mt_wait_translated_with_gemba
 /rm4mt_translated_api
 /rm4mt_eval/tmp_jobs
 .env
 /rm4mt_eval/test.py
 /rm4mt_eval/*.json
 /rm4mt_eval/*.xlsx
+/logs
