--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,12 @@
 /rm4mt_wait_translated
 /rm4mt_translated_4_test
 /rm4mt_translated_with_comet
+/rm4mt_translated_with_grb_grf
+/rm4mt_translated_with_gea
 /rm4mt_wait_translated_with_comet
-/rm4mt_translated_with_gemba
-/rm4mt_wait_translated_with_gemba
+/rm4mt_wait_translated_with_grb_grf
+/rm4mt_wait_translated_with_gea
+/archive
 /rm4mt_translated_api
 /rm4mt_eval/tmp_jobs
 .env
