Update scripts and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 /post_edited_with_comet
 /post_edited_with_grb_grf
 /post_edited_with_gea
+/post_edited_without_quality_score
+/post_edited_without_quality_score_with_comet
+/post_edited_without_quality_score_with_grb_grf
+/post_edited_without_quality_score_with_gea
