--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,7 @@
 /post_edited_without_quality_score_with_comet
 /post_edited_without_quality_score_with_grb_grf
 /post_edited_without_quality_score_with_gea
-/rm4mt_eval/analysis/*.pdf
-/rm4mt_eval/analysis/*.png
 /rm4mt_eval/analysis/*.drawio
 /rm4mt_dataset_process
 /rm4mt_dataset_statistic
-/rm4mt_eval/analysis
+/rm4mt_eval/analysis/*.ipynb
